# AMM-500

./: .gitignore  AUTONOMOUS_SETUP_GUIDE.md  BALANCE_FIXES_SUMMARY.py  CLEANUP_OPTIMIZATION_SUMMARY.md  DEPLOYMENT.md  FIFO_ORDER_MANAGEMENT.md  FINAL_REPORT.md  HFT_OPTIMIZATION_GUIDE.md  IMPLEMENTATION_SUMMARY.md  OPTIMIZATION_REPORT.txt  OPTIMIZATION_REPORT_2026-01-14.md  OPTIMIZATION_SUMMARY.md  PROFESSIONAL_MM_TRANSFORMATION.md  QUICK_START_GUIDE.md  README.md  README_OLD.md  REAL_TIME_ANALYSIS_2026-01-15.md  REORGANIZATION_COMPLETE.md  REORGANIZATION_SUMMARY.md  STATUS.md  SUMMARY.md  SYSTEM_OPTIMIZATION_REPORT_2026-01-15.md  TRADE_BASED_TRACKING.md  TRANSFER_GUIDE.md  TRANSFORMATION_COMPLETE.md  US500_TRANSFORMATION_README.md  amm-500.py  analyze_system.py  check_balance.py  cleanup_and_reorganize.sh  debug_all_account.py  emergency_balance_check.py  fetch_xyz100_test.py  fix_imports.py  generate_professional_strategy.py  investigate_balance_logic.py  pyproject.toml  pytest.ini  reorganize_structure.sh  requirements.txt  (+4 more)
config/: .env.example
data/: README.md
docs/: DEPLOYMENT_GUIDE.md  IMPLEMENTATION_SUMMARY.md  OPTIMIZATION_SUMMARY.md  RISK_ENHANCEMENTS.md
docs/guides/: EXCHANGE_ENHANCEMENTS.md  FIXES_AND_STATUS.md
logs/: README.md  autonomous_state.json  autonomous_state_backup.json
scripts/: amm_autonomous.py  amm_autonomous_v3.py  analyze_fills.py  analyze_hl_data.py  analyze_live_performance.py  analyze_live_trading.py  api_test.py  auto_optimize.py  cancel_all.py  cancel_km_orders.py  cancel_orders.py  check_all_balances.py  check_all_wallets.py  check_both_wallets.py  check_data.py  check_fills.py  check_full_balance.py  check_hip3_balance.py  check_km.py  check_liquidation.py  check_open_orders.py  check_orders.py  check_perp_dex.py  check_real_data.py  check_recent_fills.py  check_sdk.py  check_us500_meta.py  check_wallet.py  cleanup_orders.py  comprehensive_balance.py  dashboard.py  debug_api.py  debug_margin.py  deep_check.py  detailed_fills.py  fetch_btc_proxy.py  fetch_data.py  fetch_real_btc.py  fetch_real_data.py  fetch_s3_and_backtest.py  (+37 more)
scripts/analysis/: analyze_live.py  analyze_paper_results.py  analyze_pnl.py  grid_search.py  hourly_analysis.py  quick_analysis.py  spread_analysis.py
scripts/archive/: backtest_5000.py  monitor_100_cycles.py  wait_cycles.py
scripts/automation/: amm_autonomous_v3.py  setup_bot.sh  start_paper_trading.sh
scripts/debug/: debug_size.py  (+8 more)
src/: __init__.py  autonomous.py  backtest.py  config.py  data_fetcher.py  exchange.py  metrics.py  realistic_backtest.py  risk.py  strategy.py  strategy_backup_20260114_222501.py  strategy_backup_20260115_005759.py  strategy_us500_pro.py  trade_tracker.py  us500_data_collector.py  xyz100_fallback.py
tests/: __init__.py  test_backtest.py  test_config.py  test_risk.py  test_strategy.py  test_us500_strategy.py  test_utils.py
(+21 files in other folders)
